# mundosvirtuales-server

./: CMakeLists.txt  generate.bat  generateUnrealEngine.bat  generateVS2017.bat
databases/: DBDesigner_DataBase.xml  backup_DB_example.sql  postgresql.sql
src/: ClientPlant.cpp  ClientPlant.h  ServerPlant.cpp  ServerPlant.h  main.cpp
src/plant/: Assembly.cpp  Assembly.h  InfoAssembly.cpp  InfoAssembly.h  Machine.cpp  Machine.h  MachinePart.cpp  MachinePart.h  ModelAssembly.cpp  ModelAssembly.h  ModelControl.cpp  ModelControl.h  ObjectPlant.h  Part.cpp  Part.h  PlantException.h  StockPlant.cpp  StockPlant.h
src/plant/procedures/: Procedure.cpp  Procedure.h
src/plant/sensors/: Sensor.h  SensorException.h
src/test/: test_general.cpp  test_server.cpp
src/utils/: AssemblyUtils.cpp  AssemblyUtils.h  Concurrency.h  Exception.h  Loader.cpp  Loader.h  PacketComm.h  Position.cpp  Position.h  Queue.h  ResponsePacket.cpp  ResponsePacket.h  ResponsePacketClient.cpp  ResponsePacketClient.h  ResponsePacketServer.cpp  ResponsePacketServer.h  Runnable.h  SystemCall.cpp  SystemCall.h  util.h
src/utils/administration/: AdministrationException.h  User.h
src/utils/communication/: CommunicationException.h  PacketComm.h  ResponsePacket.cpp  ResponsePacket.h  ResponsePacketClient.cpp  ResponsePacketClient.h  ResponsePacketServer.cpp  ResponsePacketServer.h
src/utils/concurrency/: Concurrency.h  ConcurrencyException.h  Runnable.h
src/utils/db/: DB.cpp  DB.h  DBAdapter.cpp  DBAdapter.h  DBAdapterSOCI.cpp  DBAdapterSOCI.h  DBException.h  FieldData.cpp  FieldData.h  Loader.cpp  Loader.h  ObjectDB.cpp  ObjectDB.h  RegisterValue.cpp  RegisterValue.h  Row.cpp  Row.h  Rows.cpp  Rows.h
src/utils/logger/: Logger.cpp  Logger.h  LoggerException.h
src/utils/network/: ClientTCP.cpp  ClientTCP.h  NetworkException.h  ServerTCP.cpp  ServerTCP.h  TcpComm.cpp  TcpComm.h  UdpComm.cpp  UdpComm.h
src/utils/platform/: PlatformException.h  SystemCall.cpp  SystemCall.h
src/utils/security/: Cryptography.cpp  Cryptography.h  SecurityException.h
src/utils/serialization/: json.h
utils/SOCI/Windows/lib/x64/Debug/: libsoci_empty_4_0.lib  soci_core_4_0.lib  soci_empty_4_0.lib  soci_odbc_4_0.lib  soci_postgresql_4_0.lib
utils/SOCI/Windows/lib/x64/Release/: libsoci_empty_4_0.lib  libsoci_odbc_4_0.lib  soci_core_4_0.lib  soci_empty_4_0.lib  soci_odbc_4_0.lib  soci_postgresql_4_0.lib  utilsCore.lib
utils/SOCI/Windows/lib/x86/Debug/: libsoci_empty_4_0.lib  libsoci_odbc_4_0.lib  soci_core_4_0.lib  soci_empty_4_0.lib  soci_odbc_4_0.lib  soci_postgresql_4_0.lib
utils/SOCI/Windows/lib/x86/Release/: libsoci_core_4_0.lib  libsoci_empty_4_0.lib  libsoci_odbc_4_0.lib  libsoci_postgresql_4_0.lib  soci_core_4_0.lib  soci_empty_4_0.lib  soci_odbc_4_0.lib  soci_postgresql_4_0.lib
